Updated profile style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="en"><head><title>Krishna 2nd</title><link rel="manifest" href="/manifest.json"><link rel="icon" sizes="192x192" href="/a/i/a-8x.png"><link rel="apple-touch-icon" href="/a/i/a-8x.png"><link rel="apple-touch-icon" href="/a/i/a-4x.png"><link rel="apple-touch-icon" sizes="64x64" href="/a/i/a-2x.png"><link rel="apple-touch-icon" sizes="128x128" href="/a/i/a-4x.png"><link rel="apple-touch-icon" sizes="256x256" href="/a/i/a-8x.png"><meta name="msapplication-square70x70logo" content="/a/i/a-2x.png"><meta name="msapplication-square150x150logo" content="/a/i/a-8x.png"><meta name="msapplication-wide310x150logo" content="/a/i/a-16x.png"><meta name="theme-color" content="#2874f0"><meta name="apple-mobile-web-app-status-bar-style" content="green"><link rel="apple-touch-startup-image" href="/a/i/a-4x.png"><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/a-4x.png"><title>React App</title><link href="/static/css/main.65027555.css" rel="stylesheet"></head><body><div id="profile"></div><script type="text/javascript" src="/static/js/main.35e7c730.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Krishna Kumar</title>
+	<script type="text/javascript">
+		window.location.href = '1/index.html';
+	</script>
+</head>
+<body>
+
+</body>
+</html>
