--- a/1/index.html
+++ b/1/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="mig/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!--Google Fonts-->
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <!--Bootstrap Grid v3.1.1-->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <!--Swipebox-->
