--- a/1/index.html
+++ b/1/index.html
@@ -48,7 +48,7 @@
         <div class="sidebar">
           <img src="img/profile-pic.jpg" alt="Krishna Kumar" height="100%" width="100%" />
           <h1 class="light-text animated">Krishna Kumar </h1>
-          <h3 class="light-text animated">Application Developer <br/> &amp; <br/>Architect</h3>
+          <h3 class="light-text animated">Solution Architect <br/> &amp; <br/> Developer </h3>
           <div class="contact-details-wrap animated">
             <div class="contact-details">
               <h2 class="light-text">Contact Details</h2>
@@ -783,6 +783,6 @@ fbq('track', 'PageView');
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=1081324951927483&ev=PageView&noscript=1"
 /></noscript>
-    
+
   </body><!--Body Close-->
 </html>
