--- a/1/index.html
+++ b/1/index.html
@@ -535,33 +535,33 @@ Sauce labs API, Selenium
           </div>
           <div class="portfolio-items">
             <div class="portfolio-item" data-groups='["graphic"]'>
-              <a href="img/one_com.png" class="swipebox">
+              <a href="img/portfolio/one_com.jpg" class="swipebox">
                 <div class="overlay"><i class="zoom-icon"></i></div>
                 <div class="description">
                   <h3>One.com</h3>
                   <p>One.com web features page</p>
                 </div>
-                <img src="img/one_com.png" alt="1"/>
+                <img src="img/portfolio/one_com.jpg" alt="1"/>
               </a>
             </div>
             <div class="portfolio-item" data-groups='["graphic","coding"]'>
-              <a href="img/mygofer.png" class="swipebox">
+              <a href="img/portfolio/mygofer.jpg" class="swipebox">
                 <div class="overlay"><i class="zoom-icon"></i></div>
                 <div class="description">
                   <h3>Mygofer client</h3>
                   <p>Mygofer cart website</p>
                 </div>
-                <img src="img/mygofer.png" alt="2"/>
+                <img src="img/portfolio/mygofer.jpg" alt="2"/>
               </a>
             </div>
             <div class="portfolio-item" data-groups='["grahpic"]'>
-              <a href="img/bikroy.png" class="swipebox">
+              <a href="img/portfolio/bikroy.jpg" class="swipebox">
                 <div class="overlay"><i class="zoom-icon"></i></div>
                 <div class="description">
                   <h3>Bikroy</h3>
                   <p>Bangladesh market site</p>
                 </div>
-                <img src="img/bikroy.png" alt="3"/>
+                <img src="img/portfolio/bikroy.jpg" alt="3"/>
               </a>
             </div>
           </div>
