--- a/1/index.html
+++ b/1/index.html
@@ -7,11 +7,17 @@
     <meta charset="utf-8">
     <title>Profile: Krishna Kumar</title>
     <meta name="description" content="Krishna Kumar, Krishna2nd" />
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#2874f0">
+    <meta name="apple-mobile-web-app-status-bar-style" content="green">
+    <link rel="apple-touch-startup-image" href="img/favicon.ico" type="image/x-icon">
+
 		<meta name="keywords" content="Krishna Kumar, Krishna2nd, Web Developer, Application developer, e-commerce" />
 		<meta name="author" content="8Guild" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="mig/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!--Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
