Service worker integration

--- a/index.html
+++ b/index.html
@@ -4,7 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About me</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/icons/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/icons/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/icons/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/icons/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/icons/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/icons/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/icons/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/icons/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/icons/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/icons/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/icons/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#07cb79" />
+    <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png" />
+    <title>Krishna Kumar</title>
     <style type="text/css">
       @media only screen and (max-width: 500px) {
         div.lg {
@@ -132,6 +204,9 @@
       .social .content i {
         padding: 0 10px;
       }
+      .social i.fab {
+        font-size: 20px;
+      }
       .green-label {
         background-color: #07cb79;
         color: #fff;
@@ -214,10 +289,10 @@
     <style type="text/css">
       .md .label {
         width: 35%;
-        font-size: 1.28em;
+        font-size: 1.1em;
       }
       .md .value {
-        font-size: 1.28em;
+        font-size: 1.1em;
       }
       .md .about {
         height: 100%;
@@ -264,6 +339,12 @@
       }
       .md .last-card {
         padding-bottom: 80px;
+      }
+      .md .social {
+        height: 80px;
+      }
+      .md .social i.fab {
+        font-size: 40px;
       }
     </style>
   </head>
@@ -336,25 +417,25 @@
       <div class="social green-label flex-center">
         <div class="flex-center content">
           <a href="https://facebook.com/krishna2nd" target="_blank">
-            <i class="fab fa-facebook-f" style="font-size: 18px;"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a href="https://github.com/krishna2nd" target="_blank">
-            <i class="fab fa-github" style="font-size: 18px;"></i>
+            <i class="fab fa-github"></i>
           </a>
           <a href="https://twitter.com/Krishna2nd" target="_blank">
-            <i class="fab fa-twitter" style="font-size: 18px;"></i>
+            <i class="fab fa-twitter"></i>
           </a>
           <a
             href="https://api.whatsapp.com/send?phone=918447883963"
             target="_blank"
           >
-            <i class="fab fa-whatsapp" style="font-size: 18px;"></i>
+            <i class="fab fa-whatsapp"></i>
           </a>
           <a href="skype:krishnakumar.s.s?call" target="_blank">
-            <i class="fab fa-skype" style="font-size: 18px;"></i>
+            <i class="fab fa-skype"></i>
           </a>
           <a href="https://www.linkedin.com/in/krishna2nd" target="_blank">
-            <i class="fab fa-linkedin-in" style="font-size: 18px;"></i>
+            <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
       </div>
@@ -429,25 +510,25 @@
       <div class="card-nbpm social green-label flex-center ">
         <div class="flex-center content">
           <a href="https://facebook.com/krishna2nd" target="_blank">
-            <i class="fab fa-facebook-f" style="font-size: 18px;"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a href="https://github.com/krishna2nd" target="_blank">
-            <i class="fab fa-github" style="font-size: 18px;"></i>
+            <i class="fab fa-github"></i>
           </a>
           <a href="https://twitter.com/Krishna2nd" target="_blank">
-            <i class="fab fa-twitter" style="font-size: 18px;"></i>
+            <i class="fab fa-twitter"></i>
           </a>
           <a
             href="https://api.whatsapp.com/send?phone=918447883963"
             target="_blank"
           >
-            <i class="fab fa-whatsapp" style="font-size: 18px;"></i>
+            <i class="fab fa-whatsapp"></i>
           </a>
           <a href="skype:krishnakumar.s.s?call" target="_blank">
-            <i class="fab fa-skype" style="font-size: 18px;"></i>
+            <i class="fab fa-skype"></i>
           </a>
           <a href="https://www.linkedin.com/in/krishna2nd" target="_blank">
-            <i class="fab fa-linkedin-in" style="font-size: 18px;"></i>
+            <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
       </div>
@@ -463,5 +544,12 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </body>
 </html>
