--- a/index.html
+++ b/index.html
@@ -276,6 +276,15 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138601741-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-138601741-1');
+  </script>
+
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -283,5 +292,6 @@
         });
       }
     </script>
+    
   </body>
 </html>
