--- a/preact/index.html
+++ b/preact/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+    <link rel="preconnect" href="https://use.fontawesome.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="prefetch" href="/assets/components/swiper.min.js">
+    <link rel="prefetch" href="/assets/components/swiper.min.css">
+    <link rel="prefetch" href="/assets/components/exp-swiper.css">
+    <link rel="prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -133,5 +140,14 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <!-- <script type="text/javascript"  src="/assets/components/swiper.min.js" ></script>
+    <link rel="stylesheet" href="/assets/components/swiper.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
+    <script type="text/javascript"  src="/assets/components/exp-swiper.js" ></script>
+    <link rel="stylesheet" href="/assets/components/exp-swiper.css">
+    
   </body>
 </html>
