--- a/preact/index.html
+++ b/preact/index.html
@@ -7,7 +7,10 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
     <link rel="preconnect" href="https://use.fontawesome.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link
+      rel="prefetch"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -114,6 +117,135 @@
         color: #565656;
       }
     </style>
+    <script>
+      window.scrollIt = function(
+        destination,
+        duration = 200,
+        easing = 'linear',
+        callback
+      ) {
+        const easings = {
+          linear(t) {
+            return t;
+          },
+          easeInQuad(t) {
+            return t * t;
+          },
+          easeOutQuad(t) {
+            return t * (2 - t);
+          },
+          easeInOutQuad(t) {
+            return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
+          },
+          easeInCubic(t) {
+            return t * t * t;
+          },
+          easeOutCubic(t) {
+            return --t * t * t + 1;
+          },
+          easeInOutCubic(t) {
+            return t < 0.5
+              ? 4 * t * t * t
+              : (t - 1) * (2 * t - 2) * (2 * t - 2) + 1;
+          },
+          easeInQuart(t) {
+            return t * t * t * t;
+          },
+          easeOutQuart(t) {
+            return 1 - --t * t * t * t;
+          },
+          easeInOutQuart(t) {
+            return t < 0.5 ? 8 * t * t * t * t : 1 - 8 * --t * t * t * t;
+          },
+          easeInQuint(t) {
+            return t * t * t * t * t;
+          },
+          easeOutQuint(t) {
+            return 1 + --t * t * t * t * t;
+          },
+          easeInOutQuint(t) {
+            return t < 0.5
+              ? 16 * t * t * t * t * t
+              : 1 + 16 * --t * t * t * t * t;
+          }
+        };
+
+        // Store initial position of a window and time
+        // If performance is not available in your browser
+        // It will fallback to new Date().getTime() - thanks IE < 10
+        const start = window.pageYOffset;
+        const startTime =
+          'now' in window.performance
+            ? performance.now()
+            : new Date().getTime();
+        // const startTime = typeof(window.performance['now']) == 'function' ? performance.now() : new Date().getTime();
+
+        // Take height of window and document to sesolve max scrollable value
+        // Prevent requestAnimationFrame() from scrolling below maximum scollable value
+        // Resolve destination type (node or number)
+        const documentHeight = Math.max(
+          document.body.scrollHeight,
+          document.body.offsetHeight,
+          document.documentElement.clientHeight,
+          document.documentElement.scrollHeight,
+          document.documentElement.offsetHeight
+        );
+        const windowHeight =
+          window.innerHeight ||
+          document.documentElement.clientHeight ||
+          document.getElementsByTagName('body')[0].clientHeight;
+        const destinationOffset =
+          typeof destination === 'number' ? destination : destination.offsetTop;
+        const destinationOffsetToScroll = Math.round(
+          documentHeight - destinationOffset < windowHeight
+            ? documentHeight - windowHeight
+            : destinationOffset
+        );
+
+        // If requestAnimationFrame is not supported
+        // Move window to destination position and trigger callback function
+        if ('requestAnimationFrame' in window === false) {
+          window.scroll(0, destinationOffsetToScroll);
+          if (callback) {
+            callback();
+          }
+          return;
+        }
+
+        // function resolves position of a window and moves to exact amount of pixels
+        // Resolved by calculating delta and timing function choosen by user
+        function scroll() {
+          const now =
+            'now' in window.performance
+              ? performance.now()
+              : new Date().getTime();
+          const time = Math.min(1, (now - startTime) / duration);
+          const timeFunction = easings[easing](time);
+          window.scroll(
+            0,
+            Math.ceil(
+              timeFunction * (destinationOffsetToScroll - start) + start
+            )
+          );
+
+          // Stop requesting animation when window reached its destination
+          // And run a callback function
+          if (window.pageYOffset === destinationOffsetToScroll) {
+            if (callback) {
+              callback();
+            }
+            return;
+          }
+
+          // If window still needs to scroll to reach destination
+          // Request another scroll invokation
+          requestAnimationFrame(scroll);
+        }
+
+        // Invoke scroll and sequential requestAnimationFrame
+        scroll();
+      };
+    </script>
   </head>
   <body>
     <%= htmlWebpackPlugin.options.ssr({ url: '/' }) %>
@@ -137,6 +269,30 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-138601741-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-138601741-1');
+    </script>
+
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </body>
 </html>
